src/sass/base/_common.scss
@import '~node_modules/modern-normalize/modern-normalize.css';

body {
  font-family: Montserrat Alternates;
  background-color: var(--bg-color);
  color: var(--text-color);
  transition: all 250ms ease-in-out;;
  cursor: url('../../images/cursor.png'), default;
}

h1,
h2,
h3,
h4,
p {
  margin-top: 0;
  margin-bottom: 0;
}

ul {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
  width: 100%;
}

.list {
  list-style: none;
  padding: 0;
}

.link {
  text-decoration: none;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

main {
  background-color: #eee;
  background-image: url('../../images/background.png');
  background-size: cover;
}
button, a {
  cursor: url('../../images/pointer.png'), pointer;
}

